--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/react": "^8.4.1",
     "@storybook/react-vite": "^8.4.1",
     "@storybook/test": "^8.4.1",
+    "@storybook/test-runner": "^0.19.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
